8305509: C1 fails "assert(k != nullptr) failed: illegal use of unloaded klass"

Reviewed-by: dcubed